# hlopus

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  checkstyle.json  extraParams.hxml  haxelib.json  hxformat.json
.github/workflows/: build-windows-release.yml  build.yml
extension/: CMakeLists.txt  cmake_install.cmake  extension.c  extension.cpp  extension.vcxproj  extension.vcxproj.filters
extension/lib/opus/: config.h
extension/lib/vorbis/: README
hlopus/: Boot.hx  Decoder.hx  Macro.hx  Native.hx  SampleFormat.hx
hxd/fmt/opus/: Data.hx  Macro.hx
hxd/snd/: OpusData.hx
tests/: README.md  heaps.hxml  hl.hxml  test-heaps.bat  test-hl.bat
tests/src/: HashlinkSmokeTest.hx  HeapsSmokeTest.hx
tests/testMain/: test-heaps.hxml  test-hl.hxml
tests/testMain/res/: test.opus
tests/testMain/src/: HashlinkSmokeTest.hx  HeapsSmokeTest.hx
